--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Moredno Html theme</title>
+	<title>strong Blog</title>
 
 	<!-- Load fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -19,7 +19,7 @@
 <body>
 	<div class="jumbotron home home-fullscreen" id="home">
 		<div class="mask"></div>
-		<a href="#" class="logo">
+		<a href="#" class="strong">
 			<img src="img/logo.png" alt="Moderno - Theme">
 		</a>
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
@@ -43,7 +43,7 @@
 		</nav>
 		<div class="container">
 			<div class="header-info">
-				<h1>Moderno</h1>
+				<h1>STRONG</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br> sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua.
 				</p>
@@ -161,7 +161,7 @@
 				</p>
 			</header>
 			<div class="map-wrapper">
-				
+
 				<div class="marker">
 					<span>We Are Here</span>
 				</div>
