--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body>
 	<div class="jumbotron home home-fullscreen" id="home">
 		<div class="mask"></div>
-		<a href="#" class="strong">
-			<img src="img/logo.png" alt="Moderno - Theme">
+		<a href="index.html" class="navbar_brand">
+			Strong
 		</a>
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
 		<!-- Offsite navigation -->
