--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div class="container">
 			<div class="header-info">
 				<h1>STRONG</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,<br> sed do eiusmod
+				<p>哈哈哈哈<br> don't tell me
 					tempor incididunt ut labore et dolore magna aliqua.
 				</p>
 				<a href="#" class="btn btn-primary">Get in Touche</a>
