--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@
 				<div class="col-md-4">
 					<div class="service-item">
 						<div class="icon"><i class="fa fa-gear"></i></div>
-						<h3>We Have Skills</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua.
+						<h3>第二个什么鬼</h3>
+						<p>哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈
 						</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="service-item">
 						<div class="icon"><i class="fa fa-life-ring"></i></div>
-						<h3>We Love To Help</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-							tempor incididunt ut labore et dolore magna aliqua Ut enim ad minim veniam.
+						<h3>第三个什么鬼</h3>
+						<p>吱吱吱吱吱吱吱吱吱吱吱吱吱吱吱吱吱吱
 						</p>
 					</div>
 				</div>
