--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<p>哈哈哈哈<br> don't tell me
 					tempor incididunt ut labore et dolore magna aliqua.
 				</p>
-				<a href="#" class="btn btn-primary">Get in Touche</a>
+				<a href="#" class="btn btn-primary">don't order me!</a>
 			</div>
 		</div>
 	</div>
