--- a/index.html
+++ b/index.html
@@ -88,9 +88,8 @@
 	<section id="portfolio" class="darker">
 		<div class="container">
 			<header>
-				<h2>Success Stories</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor.
+				<h2>strong2</h2>
+				<p>No way
 				</p>
 			</header>
 			<div id="single-project"></div>
@@ -151,31 +150,30 @@
 	<section id="contact">
 		<div class="container">
 			<header>
-				<h2>Get in Touch</h2>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore.
+				<h2>别搭理我</h2>
+				<p>shart up
 				</p>
 			</header>
 			<div class="map-wrapper">
 
 				<div class="marker">
-					<span>We Are Here</span>
+					<span>---------------------------</span>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8">
 					<form class="row">
 						<div class="form-group col-md-6">
-							<input name="name" type="text" placeholder="Your Name" class="form-control" />
+							<input name="name" type="text" placeholder="你的名字" class="form-control" />
 						</div>
 						<div class="form-group col-md-6">
-							<input name="mail" type="email" placeholder="Your Email" class="form-control" />
+							<input name="mail" type="email" placeholder="邮箱" class="form-control" />
 						</div>
 						<div class="form-group col-md-12">
-							<input name="subject" type="text" placeholder="Type Message Here..." class="form-control" />
+							<input name="subject" type="text" placeholder="地址..." class="form-control" />
 						</div>
 						<div class="form-group col-md-12">
-							<textarea name="message" class="form-control" rows="10" placeholder="Message"></textarea>
+							<textarea name="留言" class="form-control" rows="10" placeholder="Message"></textarea>
 						</div>
 						<div class="form-group col-md-12">
 							<button class="btn btn-lg btn-primary">Send</button>
@@ -186,18 +184,18 @@
 					<address>
 						<span>Our Address</span>
 						<p>
-							4896 Desert Broom Court<br>
-							Newark, NJ 07102<br>
-							United States
+							大连市<br>
+							甘子井区<br>
+							腾飞软件园1期
 						</p>
 					</address>
 					<address>
-						<span>Email</span>
-						<p>mail@mail.com</p>
+						<span>电子邮件</span>
+						<p>no more</p>
 					</address>
 					<address>
 						<span>Phone</span>
-						<p>+00 123-456-78900</p>
+						<p>110转112打114问119</p>
 					</address>
 				</div>
 			</div>
