--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>strong Blog</title>
+	<title>strong的主页</title>
 
 	<!-- Load fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
@@ -25,7 +25,7 @@
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
 		<!-- Offsite navigation -->
 		<nav class="menu">
-			<a href="#" class="close"><i class="fa fa-close"></i></a>
+			<a href="http://www.4399.com/" class="start"><i class="fa fa-close"></i></a>
 			<h3>Menu</h3>
 			<ul class="nav">
 				<li><a data-scroll href="#home">Home</a></li>
@@ -44,8 +44,7 @@
 		<div class="container">
 			<div class="header-info">
 				<h1>STRONG</h1>
-				<p>哈哈哈哈<br> don't tell me
-					tempor incididunt ut labore et dolore magna aliqua.
+				<p>哈哈哈哈<br> ---------------
 				</p>
 				<a href="#" class="btn btn-primary">don't order me!</a>
 			</div>
@@ -57,7 +56,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="service-item">
-						<div class="icon"><i class="fa fa-diamond"></i></div>
+						<div class="icon"><a href="http://www.4399.com/"></a><i class="fa fa-diamond"></i></div>
 						<h3>第一个什么鬼</h3>
 						<p>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊
 						</p>
@@ -83,7 +82,7 @@
 		</div>
 	</section>
 	<!-- Services section end -->
-    <div class="copyrights">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div>
+    <div class="copyrights">Collect from <a href="http://www.5173.com/"  title="网站模板">网站模板</a></div>
 	<!-- Portfolio section start -->
 	<section id="portfolio" class="darker">
 		<div class="container">
@@ -182,7 +181,7 @@
 				</div>
 				<div class="col-md-3 col-md-offset-1">
 					<address>
-						<span>Our Address</span>
+						<span>我们的地址</span>
 						<p>
 							大连市<br>
 							甘子井区<br>
@@ -194,7 +193,7 @@
 						<p>no more</p>
 					</address>
 					<address>
-						<span>Phone</span>
+						<span>电话</span>
 						<p>110转112打114问119</p>
 					</address>
 				</div>
@@ -207,7 +206,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<p>&copy; 2015 Template by GraphBerry. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+					<p>&copy; 没有了 <a href="http://www.4399.com/" target="_blank" title="小游戏">小游戏</a> - Collect from <a href="http://www.5173.com/" title="网页模板" target="_blank">交易平台</a></p>
 				</div>
 				<div class="col-md-4">
 					<ul class="social-icons">
