--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<p>&copy; 没有了 <a href="http://www.4399.com/" target="_blank" title="小游戏">小游戏</a> - Collect from <a href="http://www.5173.com/" title="网页模板" target="_blank">交易平台</a></p>
+					<p>&copy; 没有了 <a href="http://www.4399.com/" target="_blank" title="1小游戏">小游戏</a> - Collect from <a href="http://www.5173.com/" title="网页模板" target="_blank">交易平台</a></p>
 				</div>
 				<div class="col-md-4">
 					<ul class="social-icons">
