--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8">
-					<p>&copy; 高清电影 <a href="http://www.4399.com/" target="_blank" title="1小游戏">高清电影</a> -搜索 <a href="http://www.5173.com/" title="网页模板" target="_blank">淘宝</a></p>
+					<p>&copy; 找 <a href="http://www.4399.com/" target="_blank" title="高清电影">高清电影</a> -搜索 <a href="http://www.5173.com/" title="网页模板" target="_blank">淘宝</a></p>
 				</div>
 				<div class="col-md-4">
 					<ul class="social-icons">
