--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="jumbotron home home-fullscreen" id="home">
 		<div class="mask"></div>
 		<a href="index.html" class="navbar_brand">
-			Strong
+			我的主页我做主
 		</a>
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
 		<!-- Offsite navigation -->
