--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 	<div class="jumbotron home home-fullscreen" id="home">
 		<div class="mask"></div>
-		<a href="index.html" class="navbar_brand">
+		<a href="index.html" class="">
 			我的主页我做主
 		</a>
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
