--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 							<textarea name="留言" class="form-control" rows="10" placeholder="Message"></textarea>
 						</div>
 						<div class="form-group col-md-12">
-							<button class="btn btn-lg btn-primary">Send</button>
+							<button class="btn btn-lg btn-primary">提交</button>
 						</div>
 					</form>
 				</div>
