--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
 				<div class="col-md-8">
 					<form class="row">
 						<div class="form-group col-md-6">
-							<input name="name" type="text" placeholder="你的名字" class="form-control" />
+							<input name="name" type="text" placeholder="你的名字" class="请输入你的名字" />
 						</div>
 						<div class="form-group col-md-6">
-							<input name="mail" type="email" placeholder="邮箱" class="form-control" />
+							<input name="mail" type="email" placeholder="邮箱" class="请输入你的邮箱" />
 						</div>
 						<div class="form-group col-md-12">
-							<input name="subject" type="text" placeholder="地址..." class="form-control" />
+							<input name="subject" type="text" placeholder="地址..." class="请输入你的地址" />
 						</div>
 						<div class="form-group col-md-12">
-							<textarea name="留言" class="form-control" rows="10" placeholder="Message"></textarea>
+							<textarea name="留言" class="form-control" rows="10" placeholder="留言"></textarea>
 						</div>
 						<div class="form-group col-md-12">
 							<button class="btn btn-lg btn-primary">提交</button>
