--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 							<input name="subject" type="text" placeholder="地址..." class="请输入你的地址" />
 						</div>
 						<div class="form-group col-md-12">
-							<textarea name="留言" class="form-control" rows="10" placeholder="留言"></textarea>
+							<textarea name="Message" class="form-control" rows="10" placeholder="留言"></textarea>
 						</div>
 						<div class="form-group col-md-12">
 							<button class="btn btn-lg btn-primary">提交</button>
