--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
 		<!-- Offsite navigation -->
 		<nav class="menu">
-			<a class="start"><i><a href="http://www.4399.com/" class="fa fa-close"></a></i></a>
+			<a  class="start"><i><em href="http://www.4399.com/" class="fa fa-close"></em></i></a>
 			<h3>Menu</h3>
 			<ul class="nav">
 				<li><a data-scroll href="#home">Home</a></li>
