--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<a href="" class="menu-toggle" id="nav-expander"><i class="fa fa-bars"></i></a>
 		<!-- Offsite navigation -->
 		<nav class="menu">
-			<a  class="start"><i><em href="http://www.4399.com/" class="fa fa-close"></em></i></a>
+			<a href="http://www.4399.com/" class="start"><i class="fa fa-close"></i></a>
 			<h3>Menu</h3>
 			<ul class="nav">
 				<li><a data-scroll href="#home">Home</a></li>
@@ -56,7 +56,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<div class="service-item">
-						<div class="icon"><a href="http://www.4399.com/"></a><i class="fa fa-diamond"></i></div>
+						<div class="icon"><a ></a><i><a href="http://www.4399.com/" class="fa fa-diamond"></a></i></div>
 						<h3>第一个什么鬼</h3>
 						<p>啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊啊
 						</p>
