--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<h1>STRONG</h1>
 				<p>哈哈哈哈<br> ---------------
 				</p>
-				<a href="#" class="btn btn-primary">don't order me!</a>
+				<a href="http://www.herobrine.com/" class="btn btn-primary">don't order me!</a>
 			</div>
 		</div>
 	</div>
