--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 		<!-- Offsite navigation -->
 		<nav class="menu">
 			<a href="http://www.4399.com/" class="start"><i class="fa fa-close"></i></a>
-			<h3>Menu</h3>
+			<h3>菜单</h3>
 			<ul class="nav">
-				<li><a data-scroll href="#home">Home</a></li>
-				<li><a data-scroll href="#services">Service</a></li>
-				<li><a data-scroll href="#portfolio">Portfolio</a></li>
-				<li><a data-scroll href="#contact">Contact</a></li>
+				<li><a data-scroll href="#home">主页</a></li>
+				<li><a data-scroll href="#services">介绍</a></li>
+				<li><a data-scroll href="#portfolio">用途</a></li>
+				<li><a data-scroll href="#contact">联系方式</a></li>
 			</ul>
 			<ul class="social-icons">
 				<li><a href=""><i class="fa fa-facebook"></i></a></li>
